Actualización de diseño en algunas páginas

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -14,6 +14,10 @@
     "If none of the designs on the site convince you but you like the drawing style, we have the solution. Our commissions are open and waiting for your request.":"Si ninguno de los diseños de la página te convence pero te gusta el estilo de dibujo, tenemos la solución. Nuestras comisiones están abiertas y esperando a que llegue tu petición.",
     "All our designs are 100% original, most of them start with a story that needs to be told and that nobody wants to accept is there, art has to move in some way, it doesn't always have to be pretty.":"Todos nuestros diseños son 100% originales, la mayoría empiezan con una historia que necesita ser contada y que nadie quiere aceptar que está ahí, el arte tiene que conmover de alguna manera, no tiene que ser siempre bonito.",
     "Commissions" : "Comisiones",
+    "How does it work?":"¿Cómo funciona?",
+    "Format":"Formato",
+    "The way the commissions work is very simple, after viewing the price table you just have to write us in the form at the bottom of the page the type of article it is (portrait, full body...) as well as the details that imply a price increase (more than one person, backgrounds...).":"El funcionamiento de las comisiones es muy sencillo, tras visualizar la tabla de precios solo deberás escribirnos en el formulario situado a final de la página el tipo de artículo que es (retrato, cuerpo completo...) así como los detalles que impliquen una subida del precio (más de una persona, fondos...).",
+    "We will then reply to your email with the final quote, how to pay for it, the time frame in which it will be done and we will ask for a reference photo.":"Tras esto nosotros te responderemos al email indicándote el presupuesto final, como pagarlo, el plazo en el que será realizado y pediremos alguna foto de referencia.",
     "Legal Notice" : "Aviso Legal",
     "Cookie Policy" : "Política de Cookies",
     "Purchase Terms" : "Términos de Compra",
@@ -25,6 +29,10 @@
     "Size" : "Talla",
     "Shop" : "Tienda",
     "Price" : "Precio",
+    "Prices" : "Precios",
+    "Headshot":"Retrato",
+    "Halfbody":"Medio cuerpo",
+    "Fullbody":"Cuerpo completo",
     "Products" : "Productos",
     "Prints" : "Láminas",
     "T-shirts" : "Camisetas",
@@ -89,6 +97,13 @@
     "Add VAT Number": "Agregar número VAT",
     "Added.": "Añadido.",
     "Address": "Dirección",
+    "InkSpell Style":"Estilo InkSpell",
+    "Extra character":"Personaje extra",
+    "Realism":"Realismo",
+    "JPG file":"Archivo JPG",
+    "Included":"Incluido",
+    "Black or White":"Blanca o Negra",
+    "S to XL":"Desde la S a la XL",
     "Address Line 2": "Dirección de la línea 2",
     "Administrator": "Administrador",
     "Administrator users can perform any action.": "Los administradores pueden realizar cualquier acción.",
