--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -4,6 +4,10 @@
     "Users" : "Usuarios",
     "Type" : "Tipo",
     "Read" : "Leer",
+    "Payment method" : "Método de pago",
+    "Card number" : "número de tarjeta",
+    "Expiry date" : "Fecha de caducidad",
+    "Finalise order" : "Finalizar pedido",
     "Created by the artist herself and with a completely personal drawing style, we also support the mainstream, creating designs that simply seek aesthetics without stories or interpretations of the work, just something nice to decorate your t-shirt or wall.":"Creados por la misma artista y con un estilo de dibujo completamente personal, también apoyamos la corriente mainstream, creando así diseños que simplemente buscan la estética sin historias ni intepretaciones de la obra, solo algo bonito con o que adornar tu camiseta o tu pared.",
     "InkSpell is a young company that seeks to revalue a small but great part of art that seems to be forgotten by society with less purchasing power. Nowadays, consuming music or cinema is practically within the reach of anyone, but what about drawing, painting or illustration?":"InkSpell es una joven empresa que busca revalorizar una pequeña gran parte del arte que parece olvidada por la sociedad con menos poder adquisitivo, actualmente consumir música o cine está prácticamente al alcance de cualquiera, pero ¿qué pasa con el dibujo, la pintura o la ilustración?",
     "Buy art in the format of your choice":"Compra arte en el formato que prefieras",
@@ -70,8 +74,7 @@
     "Province" : "Provincia",
     "Surname" : "Apellidos",
     "Postal Code" : "Código Postal",
-    "My data" : "Mis datos",
-    "Modify my data" : "Modificar mis datos",
+    "Edit profile" : "Editar perfil",
     "Dimensions" : "Tamaño",
     "30 Days": "30 Días",
     "60 Days": "60 Días",
