Validaciones en js y fotos de productos

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -5,7 +5,9 @@
     "Type" : "Tipo",
     "Read" : "Leer",
     "Payment method" : "Método de pago",
-    "Card number" : "número de tarjeta",
+    "Card number" : "Número de tarjeta",
+    "Incorrect card number" : "Número de tarjeta incorrecto",
+    "Incorrect CVV" : "CVV incorrecto",
     "Expiry date" : "Fecha de caducidad",
     "Finalise order" : "Finalizar pedido",
     "This site uses cookies to improve the user experience." : "Este lugar hace uso de cookies para mejorar la experiencia de usuario.",
