Eventos js en home y tienda

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -4,6 +4,7 @@
     "Users" : "Usuarios",
     "Type" : "Tipo",
     "Read" : "Leer",
+    "More information" : "Más información",
     "Payment method" : "Método de pago",
     "Card number" : "Número de tarjeta",
     "Incorrect card number" : "Número de tarjeta incorrecto",
