Añadir codigo de ersonalizacion(sin terminar)

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -5,6 +5,7 @@
     "Type" : "Tipo",
     "Read" : "Leer",
     "More information" : "Más información",
+    "Personalise" : "Personalizar",
     "Payment method" : "Método de pago",
     "Card number" : "Número de tarjeta",
     "Incorrect card number" : "Número de tarjeta incorrecto",
