--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -4,6 +4,7 @@
     "Users" : "Usuarios",
     "Type" : "Tipo",
     "Read" : "Leer",
+    "Replied" : "Respondido",
     "More information" : "Más información",
     "Personalise" : "Personalizar",
     "Payment method" : "Método de pago",
@@ -41,13 +42,16 @@
     "Size" : "Talla",
     "Shop" : "Tienda",
     "Price" : "Precio",
+    "You're almost there":"Ya casi lo tienes",
     "Prices" : "Precios",
     "Headshot":"Retrato",
     "Halfbody":"Medio cuerpo",
     "Fullbody":"Cuerpo completo",
     "Products" : "Productos",
     "Prints" : "Láminas",
+    "Print" : "Lámina",
     "T-shirts" : "Camisetas",
+    "T-shirt" : "Camiseta",
     "Your shopping cart is empty":"Tu carrito está vacio",
     "Order successfully completed":"Pedido realizado con éxito",
     "Mugs" : "Tazas",
@@ -63,10 +67,12 @@
     "Contact us" : "Contáctanos",
     "Subject" : "Asunto",
     "Message" : "Mensaje",
+    "Messages" : "Mensajes",
     "Send" : "Enviar",
     "Successfully added novelty" : "Novedad añadida con éxito",
     "Successful edition" : "Edición realizada con éxito",
     "Successfully eliminated" : "Eliminado con éxito",
+    "Successfully replied" : "Respodido con éxito",
     "Successfully added" : "Añadido con éxito",
     "Back to my profile" : "Volver a mi perfil",
     "Title" : "Título",
