Comnetarios en phpdoc

--- a/resources/lang/es.json
+++ b/resources/lang/es.json
@@ -1,5 +1,9 @@
 {
     "Upload image": "Subir imagen",
+    "Accessories" : "Accesorios",
+    "Eyes" : "Ojos",
+    "Hair" : "Pelo",
+    "Skin" : "Piel",
     "Image" : "Imagen",
     "Users" : "Usuarios",
     "Type" : "Tipo",
